--- a/css/blocks/accordeon-menu.scss
+++ b/css/blocks/accordeon-menu.scss
@@ -27,6 +27,7 @@
             animation-delay: 0.5s;
             animation-duration: 2.5s;
             animation-fill-mode: forwards;
+            animation-timing-function: ease-in-out;
         }
     }  
 }
