--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -27,11 +27,17 @@
     position: absolute;
     top: 50%;
     outline: none;
+    z-index: 100;
     &--pos--left {
         left: 5%;
         @include tablets {
-            left: -25%;
+            left: 15%;
+            top: 35%;
         }
+        @include phones {
+            left: 3%;
+        }
+        
     }
     &--pos--right {
         right: 5%;
@@ -40,18 +46,11 @@
         -o-transform: scaleX(-1);
         transform: scaleX(-1);
         @include tablets {
-            right: -25%;
+            right: 15%;
+            top: 35%;
         }
-    }
-    &--screen--desktop {
-        @include tablets {
-            display: none;
-        }
-    }
-    &--screen--mobile {
-        display: none;
-        @include tablets {
-            display: block;
+        @include phones {
+            right: 3%;
         }
     }
 }
@@ -75,6 +74,7 @@
     margin-right: 100vw;
     position: relative;
     animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
     @include tablets {
         flex-direction: column;
     }    
