--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -17,6 +17,10 @@
     }
 }
 
+.slider__inner {
+    position: relative;
+}
+
 .slider__list {
     display: flex;
     position: relative;
@@ -27,12 +31,12 @@
     position: absolute;
     top: 50%;
     outline: none;
-    z-index: 100;
+    z-index: 80;
     &--pos--left {
-        left: 5%;
+        left: -5%;
         @include tablets {
             left: 15%;
-            top: 35%;
+            top: 25%;
         }
         @include phones {
             left: 3%;
@@ -40,14 +44,14 @@
         
     }
     &--pos--right {
-        right: 5%;
+        right: -5%;
         -webkit-transform: scaleX(-1);
         -moz-transform: scaleX(-1);
         -o-transform: scaleX(-1);
         transform: scaleX(-1);
         @include tablets {
             right: 15%;
-            top: 35%;
+            top: 25%;
         }
         @include phones {
             right: 3%;
@@ -198,7 +202,7 @@
     align-items: center;
     padding: 30%;
     display: none;
-    z-index: 10;
+    z-index: 90;
     @include tablets {
         left: auto;
         right: 100%;
