--- a/css/main.css
+++ b/css/main.css
@@ -367,9 +367,7 @@ body {
 
 .wrapper {
   position: relative;
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden; }
+  width: 100%; }
 
 .container {
   max-width: 940px;
@@ -1077,6 +1075,9 @@ button {
       .slider::after {
         width: 18%; } }
 
+.slider__inner {
+  position: relative; }
+
 .slider__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1087,18 +1088,18 @@ button {
   position: absolute;
   top: 50%;
   outline: none;
-  z-index: 100; }
+  z-index: 80; }
   .slider__arrow--pos--left {
-    left: 5%; }
+    left: -5%; }
     @media screen and (max-width: 768px) {
       .slider__arrow--pos--left {
         left: 15%;
-        top: 35%; } }
+        top: 25%; } }
     @media screen and (max-width: 480px) {
       .slider__arrow--pos--left {
         left: 3%; } }
   .slider__arrow--pos--right {
-    right: 5%;
+    right: -5%;
     -webkit-transform: scaleX(-1);
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
@@ -1107,7 +1108,7 @@ button {
     @media screen and (max-width: 768px) {
       .slider__arrow--pos--right {
         right: 15%;
-        top: 35%; } }
+        top: 25%; } }
     @media screen and (max-width: 480px) {
       .slider__arrow--pos--right {
         right: 3%; } }
@@ -1292,7 +1293,7 @@ button {
   align-items: center;
   padding: 30%;
   display: none;
-  z-index: 10; }
+  z-index: 90; }
   @media screen and (max-width: 768px) {
     .slider__composition-list {
       left: auto;
