--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -28,9 +28,12 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-height: 100%;
-  overflow: hidden;
+  // height: 100%;
+  // min-height: 100%;
+  // overflow: hidden;
 }
+
+
 
 .container {
   max-width: 940px;
