--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,17 @@ body {
 
 .wrapper {
   position: relative;
-  width: 100%; }
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
+
+.maincontent {
+  height: 100%;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  -o-transition: transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s; }
 
 .container {
   max-width: 940px;
