--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -28,12 +28,15 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  // height: 100%;
+  height: 100%;
   // min-height: 100%;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
-
+.maincontent {
+  height: 100%;
+  transition: transform 1s;
+}
 
 .container {
   max-width: 940px;
