Сделал gulp до минификации CSS

--- a/css/misc/animations.scss
+++ b/css/misc/animations.scss
@@ -4,9 +4,9 @@
     }
     100% {
         width: rem(530px);
-        @include phones {
-            width: calc(100% - 85px);
-        }
+        // @include phones {
+        //     width: calc(100% - 85px);
+        // }
     }
 }
 
