--- a/src/css/blocks/map.scss
+++ b/src/css/blocks/map.scss
@@ -1,6 +1,24 @@
 .map {
     width: 100%;
-    height: 100%;
-    background: url("img/bg/map-bg.jpg") no-repeat; //решил сделать фоном, раз потом всё равно поменяем
-    background-size: cover;
+    height: 85%;
+}
+
+.map__hint {
+    padding: rem(20px);
+    min-height: rem(55px);
+    min-width: rem(195px);
+    font-size: rem(20px);
+	line-height: 1;
+	color: $white;
+    background-color: $btn-green;
+	border-radius: rem(20px);
+}
+
+.map__balloon {
+	padding: rem(20px);
+	font-size: rem(30px);
+	line-height: 1;
+	color: $white;
+	background-color: $btn-green;
+    border-radius: rem(20px);
 }
