--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -61,6 +61,8 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/slider.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/review-snippet.scss";
+@import "./blocks/how.scss";
+@import "./blocks/player.scss";
 @import "./blocks/order.scss";
 @import "./blocks/form.scss";
 @import "./blocks/fixed-menu.scss";
