Продолжение работы над плеером

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,6 +23,7 @@ $address-black: #010101;
 $title-black: #0d0d0d;
 $dark-brown: #281e1e;
 $text-grey: #666666;
+$player-grey: #626262;
 $light-grey: #f2f5f4;
 $light-grey-bg: #f8faf9;
 $social-grey: #b2b2b2;
