--- a/src/css/blocks/how.scss
+++ b/src/css/blocks/how.scss
@@ -1,9 +1,15 @@
 .how {
     background: $light-grey-bg;
-    display: flex;
-  align-items: center;
+    
 }
 
 .how__inner {
-    align-items: center;  
-  }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.how__title {
+    margin-bottom: 4.5%;
+}
