--- a/src/css/blocks/player.scss
+++ b/src/css/blocks/player.scss
@@ -1,110 +1,30 @@
 .player {
+    width: 70%;
     position: relative;
-    display: inline-block;
-  
-    &.hidden {
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-  }
-  
-  .player__splash {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: url("../img/bg/player-splash.jpg") center center / cover no-repeat;
-    cursor: pointer;
-  }
-  
-  .player__wrapper {
-    &.active .player__splash {
-      display: none;
-    }
-  }
-  
-  .player__controls {
+}
+
+.player__video {
+    width: 100%;
+    display: block;
+}
+
+.player__controls {
+    width: 100%;
+    height: 10%;
+    background-color: $dark-grey-opacity;
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
-    height: 35px;
-    background: #3e3e3e;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 25px;
-  }
-  
-  .player__start {
-    width: 0;
-    height: 0;
-    border: 11px solid transparent;
-    border-left-color: #626262;
-    padding: 0;
-    border-right-width: 0;
-    background: transparent;
-    outline: none;
-    position: relative;
-    
-    &.paused {
-      width: 14px;
-      height: 22px;
-      border: none;
-      &:after,
-      &:before {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 5px;
-        top: 0;
-        bottom: 0;
-        background: #626262;
-      }
-      &:after {
-        right: 0;
-      }
-      &:before {
-        left: 0;
-      }
-    }
-  }
-  
-  .player__playback {
-    height: 16px;
-    width: 446px;
-    position: relative;
-  
-    &:before {
-      content: "";
-      height: 4px;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      right: 0;
-      background: #626262;
-      display: block;
-      transform: translateY(-50%);
-    }
-  }
-  
-  .player__playback-button {
-    background: #626262;
-    border-radius: 50px;
-    border: none;
-    width: 12px;
-    height: 12px;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    left: 0;
-  }
-  
-  .player__duration {
-    color: #626262;
-    font-weight: bold;
-  }
-  
+}
+
+
+.player__play-btn {
+    height: 75%;
+}
+
+.player__play-icon {
+    height: rem(30px);
+    width: rem(20px);
+    fill: $player-grey;
+}
